# backgammon_board

./: .gitignore  README.md  build-bg-board-permutations.sh  build_bg_board.py  build_hex_rosette.py  pyproject.toml
completions/: install.sh
